--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <html>
 
 <head>
-  <title>SmarterCoin Strategy</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <link rel="shortcut icon" type="image/png" href="https://smartcoin.farm/images/logo.png">
+  <link rel="apple-touch-icon" sizes="192x192" href="https://smartcoin.farm/images/logo.png">
+  <link rel="apple-touch-icon" sizes="384x384" href="https://smartcoin.farm/images/logo.png">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="theme-color" content="#E84142">
+  <meta name="fortmatic-site-verification" content="j93LgcVZk79qcgyo">
+  <link rel="manifest" href="https://smartcoin.farm/manifest.json">
 
   <!-- Get some bootstrap default styles -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://smartcoin.farm/static/css/2.af4d76b1.chunk.css" rel="stylesheet">
 
   <style>
+    body * {
+      font-family: "Inter var", sans-serif !important;
+    }
+
+    body {
+      color: rgb(255, 255, 255);
+      background-color: rgb(12, 18, 30);
+    }
+
     h3 span {
       font-size: 80%;
     }
@@ -28,6 +44,10 @@
       border: 1px solid;
       overflow: auto;
     }
+
+    .header {
+      padding: 1rem 0;
+    }
   </style>
 </head>
 
@@ -36,7 +56,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1>SmarterCoin Auto-Compounder</h1>
+        <div class="header">
+          <img width="224px" src="https://smartcoin.farm/static/media/sclogotrans.4d235dbc.png" alt="logo">
+        </div>
+      </div>
+      <div class="col-md-12">
+        <h1>Compound together!</h1>
 
         <div id="connected">
 
