--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Get some bootstrap default styles -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://smartcoin.farm/static/css/2.af4d76b1.chunk.css" rel="stylesheet">
+  <link href="https://smartcoin.farm/static/css/2.af4d76b1.chunk.css" rel="stylesheet">
 
   <style>
     body * {
@@ -47,6 +47,10 @@
 
     .header {
       padding: 1rem 0;
+    }
+
+    .btn-primary {
+      background-color: rgb(33, 114, 229);
     }
   </style>
 </head>
