--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <title>SmarterCoin Strategy</title>
 
   <meta charset="utf-8">
   <link rel="shortcut icon" type="image/png" href="https://smartcoin.farm/images/logo.png">
