--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     body {
       color: rgb(255, 255, 255);
       background-color: rgb(12, 18, 30);
+      background-image: radial-gradient(50% 50% at 50% 50%, rgba(54, 76, 119, 0.37) 0%, rgb(12, 18, 30) 100%);
     }
 
     h3 span {
