--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
 
     .header {
       padding: 1rem 0;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .github {
+      display: flex;
+      border-radius: 50%;
+      overflow: hidden;
     }
 
     .btn-primary {
@@ -64,6 +72,10 @@
       <div class="col-md-12">
         <div class="header">
           <img width="224px" src="https://smartcoin.farm/static/media/sclogotrans.4d235dbc.png" alt="logo">
+          <a class="github" href="https://github.com/levan-k/compounder.smartcoin.io" target="_blank">
+            <img height="38px" src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
+              alt="github">
+          </a>
         </div>
       </div>
       <div class="col-md-12">
